[metadata]
name = LCExtract
version = 0.1.7
author = Richard Pomeroy
author_email = RTPomeroy@uclan.ac.uk
description = Small app to retrieve astronomical object photometry over time (lightcurve)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Pommers/LCExtract
project_urls =
    Bug Tracker = https://github.com/Pommers/LCExtract/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
# include_package_data = True

[options.packages.find]
where = src

# [options.data_files]
# data = data/test_new.csv, data/test_objects.csv